# WebChimera.js

./: .gitignore  .gitmodules  BUILD_README.md  CMakeLists.txt  QUICK_START.md  README_WINDOWS.md  README_macOS_PACKAGING.md  WINDOWS_SETUP.md  build_electron.cmd  build_electron.sh  build_full_package.cmd  build_full_package.sh  package-lock.json  package.json  setup_electron_headers.cmd  setup_electron_headers.sh
src/: JsVlcAudio.cpp  JsVlcAudio.h  JsVlcDeinterlace.cpp  JsVlcDeinterlace.h  JsVlcInput.cpp  JsVlcInput.h  JsVlcMedia.cpp  JsVlcMedia.h  JsVlcPlayer.cpp  JsVlcPlayer.h  JsVlcPlaylist.cpp  JsVlcPlaylist.h  JsVlcPlaylistItems.cpp  JsVlcPlaylistItems.h  JsVlcSubtitles.cpp  JsVlcSubtitles.h  JsVlcVideo.cpp  JsVlcVideo.h  NodeTools.cpp  NodeTools.h  Tools.h  VlcVideoOutput.cpp  VlcVideoOutput.h  WebChimera.cpp
webchimera_right.js/: WebChimera.js.node  package.json
